--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.easyinnova</groupId>
+    <groupId>org.openprservation</groupId>
     <artifactId>tiffimplementationchecker</artifactId>
-    <version>1.2.8</version>
+    <version>1.2.9</version>
 
     <packaging>jar</packaging>
     <name>Tiff Implementation Checker</name>
     <description>Implementation Checker for TIFF</description>
-    <url>https://github.com/EasyinnovaSL/TIFF-Implementation-Checker/</url>
-    <inceptionYear>2016</inceptionYear>
+    <url>https://github.com/openpreserve/TIFF-Implementation-Checker/</url>
+    <inceptionYear>2019</inceptionYear>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,19 +45,25 @@
             <organization>Easy Innova</organization>
             <organizationUrl>http://www.easyinnova.com</organizationUrl>
         </developer>
+        <developer>
+            <name>Carl Wilson</name>
+            <email>carl@openpreservation.org</email>
+            <organization>Open Preservation Foundation</organization>
+            <organizationUrl>https://openpreservation.org/</organizationUrl>
+        </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:easyinnova/TIFF-Implementation-Checker.git</connection>
-        <developerConnection>scm:git:git@github.com:easyinnova/TIFF-Implementation-Checker.git</developerConnection>
-        <url>git@github.com:easyinnova/TIFF-Implementation-Checker.git</url>
+        <connection>scm:git:git@github.com:openpreserve/TIFF-Implementation-Checker.git</connection>
+        <developerConnection>scm:git:git@github.com:openpreserve/TIFF-Implementation-Checker.git</developerConnection>
+        <url>git@github.com:openpreserve/TIFF-Implementation-Checker.git</url>
     </scm>
 
     <dependencies>
         <dependency>
-            <groupId>com.easyinnova</groupId>
+            <groupId>org.openpreservation</groupId>
             <artifactId>tifflibrary4java</artifactId>
-            <version>1.9.7</version>
+            <version>1.9.8</version>
         </dependency>
     </dependencies>
 
